--- a/docs/hemanth_pubs.bib
+++ b/docs/hemanth_pubs.bib
@@ -12,7 +12,7 @@
 @article{dimitriadis2019automated,
   title={Automated smartphone-based system for measuring sperm viability, DNA fragmentation, and hyaluronic binding assay score},
   author={Dimitriadis, Irene and L. Bormann, Charles and Kanakasabapathy, Manoj Kumar and Thirumalaraju, Prudhvi and Kandula, Hemanth and Yogesh, Vinish and Gudipati, Neeraj and Natarajan, Vignesh and C. Petrozza, John and Shafiee, Hadi},
-  journal={Plos one},
+  journal={PLoS One},
   volume={14},
   number={3},
   pages={e0212562},
@@ -103,7 +103,6 @@
   journal={Heliyon},
   volume={7},
   number={2},
-  pages={e06298},
   year={2021},
   publisher={Elsevier}
 }
@@ -116,9 +115,9 @@
 }
 
 @inproceedings{meyer2020can,
-  title={Can deep convolutional neural network (CNN) be used as a non-invasive method to replace Preimplantation Genetic Testing for Aneuploidy (PGT-A)?},
+  title={Can deep convolutional neural network (CNN) be used as a non-invasive method to replace preimplantation genetic testing for aneuploidy (PGT-A)?},
   author={Meyer, A and Dickinson, J and Kelly, N and Kandula, H and Kanakasabapathy, M and Thirumalaraju, P and Bormann, C and Shafiee, H},
-  booktitle={HUMAN REPRODUCTION},
+  booktitle={Human reproduction},
   volume={35},
   pages={I238--I238},
   year={2020},
@@ -132,13 +131,128 @@
   volume={9},
   pages={e55301},
   year={2020},
-  publisher={eLife Sciences Publications Limited}
+  publisher={eLife Sciences Publications, Ltd}
 }
 
 @article{shokr2020mobile,
-  title={Mobile Health (mHealth) Viral Diagnostics Enabled with Adaptive Adversarial Learning},
+  title={Mobile health (mHealth) viral diagnostics enabled with adaptive adversarial learning},
   author={Shokr, Ahmed and Pacheco, Luis GC and Thirumalaraju, Prudhvi and Kanakasabapathy, Manoj Kumar and Gandhi, Jahnavi and Kartik, Deeksha and Silva, Filipe SR and Erdogmus, Eda and Kandula, Hemanth and Luo, Shenglin and others},
   journal={ACS nano},
+  volume={15},
+  number={1},
+  pages={665--673},
   year={2020},
   publisher={American Chemical Society}
+}
+
+@article{bormann2021deep,
+  title={Deep learning early warning system for embryo culture conditions and embryologist performance in the ART laboratory},
+  author={Bormann, Charles L and Curchoe, Carol Lynn and Thirumalaraju, Prudhvi and Kanakasabapathy, Manoj K and Gupta, Raghav and Pooniwala, Rohan and Kandula, Hemanth and Souter, Irene and Dimitriadis, Irene and Shafiee, Hadi},
+  journal={Journal of Assisted Reproduction and Genetics},
+  volume={38},
+  pages={1641--1646},
+  year={2021},
+  publisher={Springer US}
+}
+
+@inproceedings{kandula2021improving,
+  title={Improving cross-lingual sentiment analysis via conditional language adversarial nets},
+  author={Kandula, Hemanth and Min, Bonan},
+  booktitle={Proceedings of the Third Workshop on Computational Typology and Multilingual NLP},
+  pages={32--37},
+  year={2021}
+}
+
+@article{kanakasabapathy2021adaptive,
+  title={Adaptive adversarial neural networks for the analysis of lossy and domain-shifted datasets of medical images},
+  author={Kanakasabapathy, Manoj Kumar and Thirumalaraju, Prudhvi and Kandula, Hemanth and Doshi, Fenil and Sivakumar, Anjali Devi and Kartik, Deeksha and Gupta, Raghav and Pooniwala, Rohan and Branda, John A and Tsibris, Athe M and others},
+  journal={Nature biomedical engineering},
+  volume={5},
+  number={6},
+  pages={571--585},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{silva2021sars,
+  title={SARS-CoV-2 RNA detection by a cellphone-based amplification-free system with CRISPR/CAS-dependent enzymatic (CASCADE) assay},
+  author={Silva, Filipe SR and Erdogmus, Eda and Shokr, Ahmed and Kandula, Hemanth and Thirumalaraju, Prudhvi and Kanakasabapathy, Manoj K and Hardie, Joseph M and Pacheco, Luis GC and Li, Jonathan Z and Kuritzkes, Daniel R and others},
+  journal={Advanced materials technologies},
+  volume={6},
+  number={12},
+  pages={2100602},
+  year={2021}
+}
+
+@article{jiang2021use,
+  title={The use of voting ensembles and patient characteristics to improve the accuracy of deep neural networks as a non-invasive method to classify embryo ploidy status},
+  author={Jiang, Victoria S and Kanakasabapathy, Manoj Kumar and Thirumalaraju, Prudhvi and Kandula, Hemanth and Souter, Irene and Dimitriadis, Irene and Bormann, Charles L and Shafiee, Hadi},
+  journal={Fertility and Sterility},
+  volume={116},
+  number={3},
+  pages={e155--e156},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{fitz2021should,
+  title={Should there be an “AI” in TEAM? Embryologists selection of high implantation potential embryos improves with the aid of an artificial intelligence algorithm},
+  author={Fitz, VW and Kanakasabapathy, MK and Thirumalaraju, P and Kandula, H and Ramirez, LB and Boehnlein, L and Swain, JE and Curchoe, CL and James, K and Dimitriadis, I and others},
+  journal={Journal of Assisted Reproduction and Genetics},
+  volume={38},
+  pages={2663--2670},
+  year={2021},
+  publisher={Springer US}
+}
+
+@article{hammer2022using,
+  title={Using artificial intelligence to avoid human error in identifying embryos: A retrospective cohort study},
+  author={Hammer, Karissa C and Jiang, Victoria S and Kanakasabapathy, Manoj Kumar and Thirumalaraju, Prudhvi and Kandula, Hemanth and Dimitriadis, Irene and Souter, Irene and Bormann, Charles L and Shafiee, Hadi},
+  journal={Journal of Assisted Reproduction and Genetics},
+  volume={39},
+  number={10},
+  pages={2343--2348},
+  year={2022},
+  publisher={Springer US}
+}
+
+@article{suarez2022validation,
+  title={Validation of a smartphone-based device to measure concentration, motility, and morphology in swine ejaculates},
+  author={Su{\'a}rez-Trujillo, Aridany and Kandula, Hemanth and Kumar, Jasmine and Devi, Anjali and Shirley, Larissa and Thirumalaraju, Prudhvi and Kanakasabapathy, Manoj Kumar and Shafiee, Hadi and Hart, Liane},
+  journal={Translational Animal Science},
+  volume={6},
+  number={4},
+  pages={txac119},
+  year={2022},
+  publisher={Oxford University Press US}
+}
+
+@article{jiang2023advancements,
+  title={Advancements in the future of automating micromanipulation techniques in the IVF laboratory using deep convolutional neural networks},
+  author={Jiang, Victoria S and Kartik, Deeksha and Thirumalaraju, Prudhvi and Kandula, Hemanth and Kanakasabapathy, Manoj Kumar and Souter, Irene and Dimitriadis, Irene and Bormann, Charles L and Shafiee, Hadi},
+  journal={Journal of Assisted Reproduction and Genetics},
+  volume={40},
+  number={2},
+  pages={251--257},
+  year={2023},
+  publisher={Springer US New York}
+}
+
+@article{jiang2023use,
+  title={The use of voting ensembles to improve the accuracy of deep neural networks as a non-invasive method to predict embryo ploidy status},
+  author={Jiang, Victoria S and Kandula, Hemanth and Thirumalaraju, Prudhvi and Kanakasabapathy, Manoj Kumar and Cherouveim, Panagiotis and Souter, Irene and Dimitriadis, Irene and Bormann, Charles L and Shafiee, Hadi},
+  journal={Journal of Assisted Reproduction and Genetics},
+  volume={40},
+  number={2},
+  pages={301--308},
+  year={2023},
+  publisher={Springer US New York}
+}
+
+@misc{shafiee2023adaptive,
+  title={ADAPTIVE NEURAL NETWORKS FOR ANALYZING MEDICAL IMAGES},
+  author={Shafiee, Hadi and Thirumalaraju, Prudhvi and Kanakasabapathy, Manoj Kumar and Kumar, Sai Hemanth},
+  year={2023},
+  month=jul # "~27",
+  note={US Patent App. 18/011,225}
 }
